src/main/java/com/example/articles/errors/PropertyIsNullException.java
package com.example.articles.errors;

public class PropertyIsNullException extends RuntimeException{
    public PropertyIsNullException(String message) {
        super(message);
    }
}
